--- a/webapp/src/app/zetapush-project/github/github.component.css
+++ b/webapp/src/app/zetapush-project/github/github.component.css
@@ -3,6 +3,11 @@ mat-spinner ::ng-deep svg {
 	background-size: contain;
 }
 
+mat-spinner {
+	position: absolute;
+	top: 15%;
+}
+
 mat-panel-title h4 i {
 	color: #a3aab1;
 }
