--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -40,7 +40,6 @@ a:hover {
 
 #undefined_data {
 	left: calc(50% - 50px);
-	top: calc(50% - 50px);
 }
 
 .title {
